landing page changes 2

--- a/assets/stylesheets/main/landing-page.css
+++ b/assets/stylesheets/main/landing-page.css
@@ -1,5 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Poppins:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Instrument+Serif&family=Kaushan+Script&family=Poppins:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap');
+
 body{
+    /* font-family: "alternative-font", sans-serif; */
     font-family: 'Poppins',sans-serif;
     padding-top: 65px;
 }
@@ -7,13 +9,16 @@ body{
 .wrapper{
     /* background: url("/BigFarm/assets/images/burgess-milner-OYYE4g-I5ZQ-unsplash.jpg"); */
     width: 100vw;
-    height: calc(100vh - 65px);
+    max-height: calc(100vh - 65px);
     font-family: 'Poppins',sans-serif;
-    object-fit: cover;
     position: relative;
-}
-.wrapper img{
     overflow: hidden;
+}
+
+.wrapper img{
+    object-fit: cover;
+    /* max-width: 100%; */
+    /* height: 100vh; */
 }
 
 .our-introduction{
@@ -22,14 +27,13 @@ body{
     background-color: rgba(255, 220, 220, 0.4);
     -webkit-backdrop-filter: blur(15px);
     backdrop-filter: blur(15px);
-    border-radius: 0px 30px 30px 0px;
     left: 0;
     height: 100%;
-    width: 50%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    line-height: 40px;
+    line-height: 20px;
 }
 .special-text{
     font-family: 'Kaushan Script', cursive;
@@ -38,5 +42,66 @@ body{
 }
 .intro-text{
     font-weight: 400;
-    
+
+}
+.logo-text{
+    font-family: 'Instrument Serif', serif;
+    font-weight: 700;
+    font-size: 64px;
+}
+@media screen and (min-width: 1439px){
+    .our-introduction{
+        width: 50%;
+        line-height: 40px;
+        border-radius: 0px 30px 30px 0px;
+    }
+}
+.poli-card{
+    display: flex;
+    width: 100vw;
+    height: 250px;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.policy-card{
+    width: 365px;
+    height: 82px;
+    display: flex;
+    font-size: 13px;
+    box-shadow: #959da5 0px 8px 24px 0px;
+    align-items: center;
+    justify-content: flex-start;
+    line-height: 16px;
+    transition: 0.5s ease-in;
+    cursor:pointer;
+}
+.policy-card__info{
+    width: 195px;
+    height: 42px;
+}
+.policy-card__icon{
+    color: #c12828;
+    font-size: 39px;
+    width: 138px;
+    height: 39px;
+    text-align: center;
+}
+.policy-card__info-name{
+    color: #000;
+    font-weight: 600;
+    line-height: 16px;
+    font-size: 16.25px;
+    margin-bottom: 5px;
+    transition: 0.5s ease-in;
+}
+.policy-card__info-description{
+    color: #8d8d8d;
+    font-size: 13px;
+}
+.policy-card:hover{
+    transform: translateY(-10px);
+
+}
+.policy-card:hover .policy-card__info-name{
+    color: #c12828;
 }
